--- a/Html5+Css3/CSS3/BasicOfCSS/CssCoreBasic/CssStyleRules/HowUseCssStyleInHtml.css
+++ b/Html5+Css3/CSS3/BasicOfCSS/CssCoreBasic/CssStyleRules/HowUseCssStyleInHtml.css
@@ -1,10 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+/*How to use the css in the html.
+One:Write the css in the tag of style
+Like this:<style>
+.{background:black
+}
+</style>
+Two:We can create a css file in the directory.
+By link tag to use css file
+Like this:
+<link href="/cssfile"> or
+<style>
+@import url("add css file");
+</style>
+*/
