--- a/Html5+Css3/Form/MakeInformationTable/MakeInformationTable.css
+++ b/Html5+Css3/Form/MakeInformationTable/MakeInformationTable.css
@@ -1,3 +1,59 @@
+/*全局设定*/
 body{
-
+    font-size: 12px;
+    font-family: 微软雅黑;
+}
+body,form,input,h1,p{
+    padding: 0;
+    margin: 0;
+    border: 0;
+}
+.bg{
+    width: 1431px;
+    height: 717px;
+    /*background: url("") no-repeat;*/
+    position: relative;
+}
+form{
+    width: 600px;
+    height: 400px;
+    margin: 50px auto;
+    padding-left:30px;
+    position: absolute;
+    left: 48%;
+    top: 10%;
+}
+h2{
+    text-align: center;
+    margin: 16px 0;
+}
+p{
+    margin-top: 20px;
+}
+p span{
+    width: 75px;
+    display: inline-block;
+    text-align: right;
+    padding-left: 10px;
+}
+p input{
+    width: 200px;
+    height: 18px;
+    border: 1px solid #38A1BF;
+    padding: 2px;
+}
+.lucky input{
+    width: 100px;
+    height: 24px;
+}
+.btn input{
+    width: 100px;
+    height: 30px;
+    background: #93B518;
+    margin-top: 20px;
+    margin-left: 75px;
+    border-radius: 3px;
+    font-size: 18px;
+    font-family: 微软雅黑;
+    color: #FFF;
 }
